# Arduino3dEngine

./: CMakeLists.txt  README.md  platformio.ini
include/: config.h  demo.h  display.h  fixp_math.h  linalg.h  renderer.h  triangle.h  util.h
src/: debug.cpp  demo.cpp  display.cpp  fixp_math.cpp  linalg.cpp  main.cpp  renderer.cpp  triangle.cpp  util.cpp
